--- a/css/styles.css
+++ b/css/styles.css
@@ -11,24 +11,39 @@ canvas {
 
 .score {
     margin: 10px auto;
-    display: flex;
-    width: 300px;
+    display: block;
+    /* display: flex; */
+    width: 400px;
     height: 50px;
-    justify-content: space-around;
+    /* justify-content: space-around;
     vertical-align: middle;
-    text-align: center;
+    text-align: center; */
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    color: azure;
+    background-color: rgb(77, 77, 77);
+    border: 2px solid black;
+    border-radius: 10px;
 }
 
 #currentScore {
-    margin: auto 0;
-    height: max-content;
-    font-size: 30px;
+    display: inline-block;
+    margin: auto 5px;
+    font-size: 25px;
+    vertical-align: sub;
 }
 
 #bestScore {
-    margin: auto 0;
-    height: max-content;
-    font-size: 30px;
+    display: inline-block;
+    margin: auto 5px;
+    font-size: 25px;
+    vertical-align: sub;
+}
+
+.text {
+    display: inline-block;
+    padding-left: 10px;
 }
 
 #gameBoard {
@@ -38,6 +53,19 @@ canvas {
 }
 
 #restartBtn {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    width: 400px;
+    height: 50px;
     display: block;
     margin: 10px auto;
+    color: azure;
+    background-color:rgb(77, 77, 77);
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+#restartBtn:hover {
+    transform: scale(0.95);
 }
